[project]
name = "rustmolbpe"
version = "0.2.0"
description = "A BPE (Byte Pair Encoding) tokenizer for molecular SMILES written in Rust with Python bindings"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

# Tells Python to use maturin as the build backend
[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

# Maturin-specific configuration
[tool.maturin]
# Build features - enables extension-module only for Python builds
features = ["extension-module"]
include = ["rustmolbpe.pyi", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = "test_*.py"
markers = [
    "slow: marks tests as slow (use -m 'not slow' to skip)",
]
